<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/boardbackground"
        android:clipChildren="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/turn_indicator"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentLeft="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Turn:"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/turn_indicator_image_view"
                android:src="@drawable/redtoken"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/turn_indicator"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/winner_text"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:text="Winner!"/>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:id="@+id/game_board"
            android:clipChildren="false"
            android:gravity="bottom"
            android:layout_below="@+id/winner_text"
            tools:context=".GameActivity">
            <include layout="@layout/board_row" />
            <include layout="@layout/board_row" />
            <include layout="@layout/board_row" />
            <include layout="@layout/board_row" />
            <include layout="@layout/board_row" />
            <include layout="@layout/board_row" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:clipChildren="false"
            android:background="@android:color/transparent"
            android:gravity="bottom"
            android:id="@+id/game_board_front"
            tools:context=".GameActivity">
            <include layout="@layout/front_board_row" android:id="@+id/row_1" />
            <include layout="@layout/front_board_row" android:id="@+id/row_2" />
            <include layout="@layout/front_board_row" android:id="@+id/row_3" />
            <include layout="@layout/front_board_row" android:id="@+id/row_4" />
            <include layout="@layout/front_board_row" android:id="@+id/row_5" />
            <include layout="@layout/front_board_row" android:id="@+id/row_6" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_names"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:weightSum="1.0">
        <EditText
            android:id="@+id/red_name"
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:layout_height="25dp"
            android:background="@color/primary_player"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Edit Name"/>
            <EditText
                android:id="@+id/yellow_name"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:layout_height="25dp"
                android:background="@color/secondary_player"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Edit Name"/>
        </LinearLayout>
    </RelativeLayout>
