<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-2dp"
    android:clipChildren="false">
    <ImageView
        android:id="@+id/col_1"
        android:layout_width="0dp"
        android:layout_weight=".17"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/boardslot"/>
    <ImageView
        android:id="@+id/col_2"
        android:layout_width="0dp"
        android:layout_weight=".17"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/boardslot"/>
    <ImageView
        android:id="@+id/col_3"
        android:layout_width="0dp"
        android:layout_weight=".17"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/boardslot"/>
    <ImageView
        android:id="@+id/col_4"
        android:layout_width="0dp"
        android:layout_weight=".17"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/boardslot"/>
    <ImageView
        android:id="@+id/col_5"
        android:layout_width="0dp"
        android:layout_weight=".17"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/boardslot"/>
    <ImageView
        android:id="@+id/col_6"
        android:layout_width="0dp"
        android:layout_weight=".17"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/boardslot"/>
    <ImageView
        android:id="@+id/col_7"
        android:layout_width="0dp"
        android:layout_weight=".17"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/boardslot"/>
</LinearLayout>